style sheet added

--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3 Artitects</title>
+    <link rel="stylesheet" href="styles/architects.css">
 </head>
-<body>
+<body class="work-sans-font">
     <header>
-
+        <div class="navbar">
+            <h2 class="brand-title">G3 Architects</h2>
+        </div>
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
