--- a/index.html
+++ b/index.html
@@ -7,9 +7,18 @@
     <link rel="stylesheet" href="styles/architects.css">
 </head>
 <body class="work-sans-font">
-    <header>
-        <div class="navbar">
+    <header class="header bg-color">
+        <div class="navbar display-flex">
             <h2 class="brand-title">G3 Architects</h2>
+            <ul class="nav-links display-flex">
+                <li class="nav-item"><a href="" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="" class="nav-link">About</a></li>
+                <li class="nav-item"><a href="" class="nav-link">Contact Us</a></li>
+                <li class="nav-item"><a href="" class="nav-link">Login</a></li>
+            </ul>
+        </div>
+        <div class="banner">
+            
         </div>
     </header>
     <main>
