--- a/index.html
+++ b/index.html
@@ -32,7 +32,23 @@
         </div>
     </header>
     <main>
-
+        <section class="teams display-flex">
+            <div class="teams-img-container">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="teams-features">
+                <h3 class="feature-title">
+                    <span class="text-light-gray" id="quick-list">Quick list</span> 
+                    <span id="Our">of Our</span> 
+                    <span id="feature">Features</span>
+                </h3>
+                <p class="feature-description text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
     </main>
     <footer>
 
