--- a/index.html
+++ b/index.html
@@ -50,9 +50,35 @@
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
-        <!-- Feature will enjoy -->
-         <section class="enjoy">
-
+        <!-- Features Section Start -->
+         <section class="features display-flex">
+            <div class="feature-card">
+                <h3 id="feature-title" class="section-title">Features you will love & enjoy</h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <div class="feature-card">
+                    <h4 class="feature-card-title">Desktop & Mobile Version</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-card-title">Drag & Drop Builder</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-card-title">Awesome Modern Design</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-card-title">Super Easy to Edit</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+            </div>
+            <div class="experienced-architect">
+                <img src="images/architect.png" alt="">
+                <button class="experience-badge">
+                    <span id="experience-year">10+Yeas</span><br>
+                    <span id="experience-description">Experience</span>
+                </button>
+            </div>
          </section>
          <!-- Some Facts -->
           <section class="facts">
